Fixing overflowing #page-nav when sidebar active
Removing negative margin-right from #page-nav

--- a/css/nav.less
+++ b/css/nav.less
@@ -2,7 +2,7 @@
   min-height: 60px;
   position: relative;
   background-color: @white;
-  margin: 0 -30px 20px;
+  margin: 0 0 20px;
   &.mobile-nav {
     @media (max-width: @screen-xs-max) {
       margin: 0 0 20px;
